--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "MIT",
   "scripts": {
     "postinstall": "npm rebuild node-sass",
-    "start": "node app.js",
+    "start": "nodemon app.js",
     "test": "nyc mocha --timeout=3000 --exit",
     "lint": "eslint **/*.js"
   },
@@ -34,6 +34,7 @@
     "express-status-monitor": "^1.1.2",
     "express-validator": "^5.2.0",
     "fbgraph": "^1.4.4",
+    "firebase-admin": "^5.13.1",
     "instagram-node": "^0.5.8",
     "jquery": "^3.3.1",
     "lastfm": "^0.9.2",
